// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResetPasswordPage should match invalid token message section snapshot 1`] = `
<div
  className="d-flex justify-content-center m-4"
  id="main"
>
  <div
    className="d-flex flex-column mw-500"
  >
    <form
      className=""
    >
      <h3
        className="mt-3"
      >
        Reset your password
      </h3>
      <p
        className="mb-4"
      >
        Enter and confirm your new password.
      </p>
      <div
        className="form-group w-100"
      >
        <span />
        <input
          aria-describedby=""
          className="form-control"
          id="reset-password-input"
          name="new-password1"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          placeholder="New password"
          required={true}
          type="password"
          value=""
        />
        <span />
      </div>
      <div
        className="form-group w-100"
      >
        <span />
        <input
          aria-describedby=""
          className="form-control"
          id="confirm-password-input"
          name="new-password2"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          placeholder="Confirm password"
          required={true}
          type="password"
          value=""
        />
        <span />
        <strong
          className="invalid-feedback"
          id="confirm-password-input-invalid-feedback"
        >
          Passwords do not match.
        </strong>
      </div>
      <button
        aria-disabled={false}
        aria-live="assertive"
        className="pgn__stateful-btn pgn__stateful-btn-state-null btn-primary btn btn-primary"
        disabled={false}
        onClick={[Function]}
        onMouseDown={[Function]}
        type="submit"
      >
        <span
          className="d-flex align-items-center justify-content-center"
        >
          Reset my password
        </span>
      </button>
    </form>
  </div>
</div>
`;

exports[`ResetPasswordPage should match pending reset message section snapshot 1`] = `
<div
  className="d-flex justify-content-center m-4"
  id="main"
>
  <div
    className="d-flex flex-column mw-500"
  >
    <form
      className=""
    >
      <h3
        className="mt-3"
      >
        Reset your password
      </h3>
      <p
        className="mb-4"
      >
        Enter and confirm your new password.
      </p>
      <div
        className="form-group w-100"
      >
        <span />
        <input
          aria-describedby=""
          className="form-control"
          id="reset-password-input"
          name="new-password1"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          placeholder="New password"
          required={true}
          type="password"
          value=""
        />
        <span />
      </div>
      <div
        className="form-group w-100"
      >
        <span />
        <input
          aria-describedby=""
          className="form-control"
          id="confirm-password-input"
          name="new-password2"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          placeholder="Confirm password"
          required={true}
          type="password"
          value=""
        />
        <span />
        <strong
          className="invalid-feedback"
          id="confirm-password-input-invalid-feedback"
        >
          Passwords do not match.
        </strong>
      </div>
      <button
        aria-disabled={true}
        aria-live="assertive"
        className="pgn__stateful-btn pgn__stateful-btn-state-pending btn-primary disabled btn btn-primary"
        disabled={false}
        onClick={[Function]}
        onMouseDown={[Function]}
        type="submit"
      >
        <span
          className="d-flex align-items-center justify-content-center"
        >
          <span
            className="pgn__stateful-btn-icon"
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-spinner fa-w-16 fa-spin "
              data-icon="spinner"
              data-prefix="fas"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M304 48c0 26.51-21.49 48-48 48s-48-21.49-48-48 21.49-48 48-48 48 21.49 48 48zm-48 368c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zm208-208c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zM96 256c0-26.51-21.49-48-48-48S0 229.49 0 256s21.49 48 48 48 48-21.49 48-48zm12.922 99.078c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.491-48-48-48zm294.156 0c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.49-48-48-48zM108.922 60.922c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.491-48-48-48z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </span>
          Reset my password
        </span>
      </button>
    </form>
  </div>
</div>
`;

exports[`ResetPasswordPage should match reset password default section snapshot 1`] = `
<div
  className="d-flex justify-content-center m-4"
  id="main"
>
  <div
    className="d-flex flex-column mw-500"
  >
    <form
      className=""
    >
      <h3
        className="mt-3"
      >
        Reset your password
      </h3>
      <p
        className="mb-4"
      >
        Enter and confirm your new password.
      </p>
      <div
        className="form-group w-100"
      >
        <span />
        <input
          aria-describedby=""
          className="form-control"
          id="reset-password-input"
          name="new-password1"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          placeholder="New password"
          required={true}
          type="password"
          value=""
        />
        <span />
      </div>
      <div
        className="form-group w-100"
      >
        <span />
        <input
          aria-describedby=""
          className="form-control"
          id="confirm-password-input"
          name="new-password2"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          placeholder="Confirm password"
          required={true}
          type="password"
          value=""
        />
        <span />
        <strong
          className="invalid-feedback"
          id="confirm-password-input-invalid-feedback"
        >
          Passwords do not match.
        </strong>
      </div>
      <button
        aria-disabled={false}
        aria-live="assertive"
        className="pgn__stateful-btn pgn__stateful-btn-state-null btn-primary btn btn-primary"
        disabled={false}
        onClick={[Function]}
        onMouseDown={[Function]}
        type="submit"
      >
        <span
          className="d-flex align-items-center justify-content-center"
        >
          Reset my password
        </span>
      </button>
    </form>
  </div>
</div>
`;

exports[`ResetPasswordPage should match successful reset message section snapshot 1`] = `
<div
  className="d-flex justify-content-center m-4"
>
  <div
    className="d-flex flex-column"
  >
    <div
      className="text-left mw-500"
    >
      <div
        className="fade alert alert-success show"
        role="alert"
      >
        <div
          className="alert-heading h4"
        >
          Password reset complete.
        </div>
        <span>
          Your password has been reset. 
          <a
            className="font-weight-normal text-info alert-link"
            href="/login"
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            <span>
              Sign in to your account.
            </span>
          </a>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`ResetPasswordPage show spinner component during token validation 1`] = `
<div
  className="d-flex justify-content-center m-4"
  id="main"
>
  <div
    className="d-flex flex-column mw-500"
  >
    <form
      className=""
    >
      <h3
        className="mt-3"
      >
        Reset your password
      </h3>
      <p
        className="mb-4"
      >
        Enter and confirm your new password.
      </p>
      <div
        className="form-group w-100"
      >
        <span />
        <input
          aria-describedby=""
          className="form-control"
          id="reset-password-input"
          name="new-password1"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          placeholder="New password"
          required={true}
          type="password"
          value=""
        />
        <span />
      </div>
      <div
        className="form-group w-100"
      >
        <span />
        <input
          aria-describedby=""
          className="form-control"
          id="confirm-password-input"
          name="new-password2"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          placeholder="Confirm password"
          required={true}
          type="password"
          value=""
        />
        <span />
        <strong
          className="invalid-feedback"
          id="confirm-password-input-invalid-feedback"
        >
          Passwords do not match.
        </strong>
      </div>
      <button
        aria-disabled={false}
        aria-live="assertive"
        className="pgn__stateful-btn pgn__stateful-btn-state-null btn-primary btn btn-primary"
        disabled={false}
        onClick={[Function]}
        onMouseDown={[Function]}
        type="submit"
      >
        <span
          className="d-flex align-items-center justify-content-center"
        >
          Reset my password
        </span>
      </button>
    </form>
  </div>
</div>
`;
